# cmake-example

./: .gitignore  .gitmodules  CMakeLists.txt
MyExecutable/: CMakeExample.cpp  CMakeExample.h  CMakeLists.txt
MyStaticLibrary/: CMakeLists.txt  MyStaticLib.cpp  MyStaticLib.h
